crates/vue_oxc_toolkit/fixtures/error/recoverable-script.vue
<template>
  <div></div>
</template>

<script lang="ts" setup>
const a = { b = 1, c = 1 };
</script>

<style></style>
